--- a/doc/man1/openssl-dgst.pod.in
+++ b/doc/man1/openssl-dgst.pod.in
@@ -27,6 +27,8 @@ B<openssl> B<dgst>|I<digest>
 [B<-signature> I<filename>]
 [B<-sigopt> I<nm>:I<v>]
 [B<-hmac> I<key>]
+[B<-hmac-env> I<var>]
+[B<-hmac-stdin>]
 [B<-mac> I<alg>]
 [B<-macopt> I<nm>:I<v>]
 [B<-fips-fingerprint>]
@@ -157,6 +159,32 @@ The actual signature to verify.
 
 Create a hashed MAC using "key".
 
+Cannot be used together with -mac option.
+If multiple -hmac, -hmac-env or -hmac-stdin options are specified, the last
+one is applied.
+
+The L<openssl-mac(1)> command should be preferred to using this command line
+option.
+
+=item B<-hmac-env> I<var>
+
+Create a hashed MAC using a key from the environment variable "var".
+
+Cannot be used together with -mac option.
+If multiple -hmac, -hmac-env or -hmac-stdin options are specified, the last
+one is applied.
+
+The L<openssl-mac(1)> command should be preferred to using this command line
+option.
+
+=item B<-hmac-stdin>
+
+Create a hashed MAC using a key obtained from the standard input.
+
+Cannot be used together with -mac option.
+If multiple -hmac, -hmac-env or -hmac-stdin options are specified, the last
+one is applied.
+
 The L<openssl-mac(1)> command should be preferred to using this command line
 option.
 
@@ -167,6 +195,8 @@ algorithm is HMAC (hash-based MAC), but there are other MAC algorithms
 which are not based on hash, for instance B<gost-mac> algorithm,
 supported by the B<gost> engine. MAC keys and other options should be set
 via B<-macopt> parameter.
+
+Cannot be used together with -hmac, -hmac-env and -hmac-stdin.
 
 The L<openssl-mac(1)> command should be preferred to using this command line
 option.
@@ -190,7 +220,35 @@ Specifies MAC key in hexadecimal form (two hex digits per byte).
 Key length must conform to any restrictions of the MAC algorithm
 for example exactly 32 chars for gost-mac.
 
+=item B<keyenv:>I<var>
+
+Read the MAC key as an alphanumeric string from the environment variable
+(use if the key contains printable characters only).
+The the key length must conform to any restrictions of the MAC algorithm.
+A key must be specified for every MAC algorithm.
+
+=item B<keyenvhex:>I<var>
+
+Read the MAC key in hexadecimal form (two hex digits per byte)
+from the environment variable.
+The key length must conform to any restrictions of the MAC algorithm.
+A key must be specified for every MAC algorithm.
+
+=item B<keyfile:>I<filename>
+
+Read the MAC key from the specified file. The key is read as binary data.
+The key length must conform to any restrictions of the MAC algorithm.
+A key must be specified for every MAC algorithm.
+
+=item B<keystdin>
+
+Read the MAC key from the standard input.
+The key length must conform to any restrictions of the MAC algorithm.
+A key must be specified for every MAC algorithm.
+
 =back
+
+If multiple MAC key options are specified, the last one is applied.
 
 The L<openssl-mac(1)> command should be preferred to using this command line
 option.
